my-apps/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.81 # Use an IP from your MetalLB pool
  selector:
    app: hello-world
  ports:
    - port: 8080
      targetPort: 8080
