my-apps/hello-world/hello-world-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-world
  namespace: hello-world
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  parentRefs:
    - name: traefik # Gateway name
      namespace: traefik # Namespace where Traefik Gateway is deployed
      sectionName: https # Must match listeners[].name in Gateway
  hostnames:
    - "hello-world.isandeshsol.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-world
          port: 8080
