my-apps/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  namespace: hello-world
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-stg
    cert-manager.io/common-name: hello-world.isandeshsol.com
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik-external
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-world
          port: 8080
  tls:
    - hosts:
        - hello-world.isandeshsol.com
      secretName: hello-world-tls
